# TapeLooper

./: .gitignore  .gitmodules  LICENSE.md  README.md
dsp/: CMakeLists.txt
dsp/lib/sprout/: CMakeLists.txt  README.rst
dsp/lib/sprout/example/brainfuck/: echo.bf  fizzBuzz.bf  self.bf
dsp/lib/sprout/example/hanoi/: main.cpp
dsp/lib/sprout/example/inv_fizzbuzz/: main.cpp
dsp/lib/sprout/example/perceptron/: g3_teach.csv
dsp/lib/sprout/example/zundoko/: main.cpp
dsp/lib/sprout/libs/utility/: CMakeLists.txt
dsp/lib/sprout/sprout/: algorithm.hpp  array.hpp  assert.hpp  cinttypes.hpp  compost.hpp  config.hpp  container.hpp  cstdlib.hpp  ctime.hpp  current_function.hpp  cwchar.hpp  cwctype.hpp  endian_traits.hpp  forward_clist.hpp  functional.hpp  math.hpp  memory.hpp  net.hpp  none.hpp  numeric.hpp  pit.hpp  predef.hpp  random.hpp  sized_pit.hpp  stateful.hpp  string.hpp  sub_array.hpp  type_traits.hpp  valarray.hpp  variant.hpp  weed.hpp  workaround.hpp
dsp/lib/sprout/sprout/algorithm/: all_of.hpp  all_of_equal.hpp  any_of_equal.hpp  binary_search.hpp  bogo_sort.hpp  bozo_sort_result.hpp  clamp.hpp  clamp_range.hpp  clamp_range_copy.hpp  copy_backward.hpp  copy_until.hpp  copy_while.hpp  count.hpp  cxx14.hpp  equal_range.hpp  find_end.hpp  find_if.hpp  find_if_not.hpp  find_intersection.hpp  (+52 more)
dsp/lib/sprout/testspr/: algorithm.hpp  iterator.hpp  range.hpp  singleton.hpp
dsp/src/dsp/: AudioBuffer.h  Biquad.h  DspHelpers.cpp  DspHelpers.h  EmphasisEq.h  PeakMeter.h  Player.h  Recorder.h  TapeEq.h  TapeGrain.h  TapeLooper.h  TapeProcessor.h  TapeSaturator.h  WowAndFlutter.h
dsp/src/util/: Memory.h
dsp/tests/: AudioBuffer_gtest.cpp  Makefile  Memory_gtest.cpp  Player_gtest.cpp  Recorder_gtest.cpp  gtest-all.cpp  gtest_main.cpp
firmware/: CMakeLists.txt  Makefile
firmware/app/: constants.h
firmware/app/dsp/: Player.h  Recorder.h
firmware/app/ui/: UiBasePage.h
firmware/lib/sprout/libs/: CMakeLists.txt
firmware/lib/sprout/sprout/: bitset.hpp  brainfuck.hpp  cctype.hpp  checksum.hpp  cmath.hpp  complex.hpp  compressed_pair.hpp  cstddef.hpp  cstdint.hpp  cstring.hpp  ctype.hpp  darkroom.hpp  generator.hpp  index_tuple.hpp  integer.hpp  io.hpp  iterator.hpp  limits.hpp  logic.hpp  operation.hpp  optional.hpp  preprocessor.hpp  range.hpp  rational.hpp  static_assert.hpp  static_warning.hpp  tuple.hpp  type.hpp  utility.hpp  uuid.hpp  version.hpp
firmware/lib/sprout/testspr/: assert.hpp  functional.hpp  header_all.hpp  include_main.hpp  print.hpp  sprout.cpp  tools.hpp  trace.hpp  typeinfo.hpp  utility.hpp
firmware/src/: LooperController.h  constants.h  main.cpp
firmware/src/hardware/: Buttons.h  Leds.h  Pots.h  UiHardware.h  UiHardwareTypes.h
firmware/src/ui/: LooperParameterProvider.h  TapeLooperUi.h  UiBasePage.h  UiLoadPage.h  UiRecordingPage.h  UiSavePage.h  UiSettingsPage.h
firmware/src/util/: LateInitializedObject.h  PlateauMap.h
firmware/tests/: LooperController_gtest.cpp  Makefile  PlateauMap_gtest.cpp  Recorder_gtest.cpp  Ui_gtest.cpp  gtest-all.cpp  gtest_main.cpp  libDaisyCombined.cpp
firmware/tests/mocks/: LooperController_mock.h  ParameterProvider_mock.h  PeakMeter_mock.h  UiHardware_mock.h
(+2734 files in other folders)
